@@ -12,7 +12,7 @@ What follows is a list of projects that the GCJ community would love
 to see someone pick up and run with.  If you're interested in any of
 these, be sure to send a note with your questions, ideas or intentions
 to the <a
-href="mailto:java@gcc.gnu.org">java-discuss</a>
+href="mailto:java@gcc.gnu.org">java</a>
 mailing list.  Similarly, if you would like to see a project listed
 here that isn't, send a patch for this HTML file to the <a
 href="mailto:java-patches@gcc.gnu.org">java-patches</a> list.
@@ -27,18 +27,6 @@ manifest file.
 </p>
 
 
-<h2>Plugin for Mozilla</h2>
-
-<p>
-<a href="http://www.mozilla.org/">Mozilla</a> is open-source web browser,
-designed for standards compliance, performance and portability.  The
-Open JVM Integration project (OJI) is a Mozilla sub-project, and is
-working to extend the browser to allow Java virtual machines to be
-plugged into Mozilla.  A gij based plugin would be very nice indeed
-(gijzilla?).
-</p>
-
-
 <h2>Benchmark infrastructure</h2>
 
 <p>
@@ -49,8 +37,7 @@ identify opportunities for improvement.
 </p>
 <p>
 <a href="mailto:bryce@albatross.co.nz">Bryce McKinlay</a> has put
-together a list of some benchmarks that run on GCJ.  IBM has also
-recently released a set of "micro benchmarks" called jMocha.
+together a list of some benchmarks that run on GCJ.
 Building some infrastructure around these would be incredibly useful.
 </p>
 
@@ -97,11 +84,6 @@ we want:</p>
 <h2>Compiler improvements</h2>
 
 	  <ul>
-	    <li>We'd like gcj to do tree-level inlining like the C++
-	    compiler.  We're most of the way there (when compiling
-	    from Java source code), since gcj already represents
-	    entire functions as trees.</li>
-
             <li>Once we have tree-level inlining, we can use it to
             sometimes eliminate unnecessary synchronizations.
             Combined with a simple "no escape" flag, this could also
