@@ -1,3 +1,10 @@
+2011-05-13  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* projects.html: Update name of java mailing list.
+	(Plugin for Mozilla): Remove section.
+	(Compiler Improvements): Remove tree inlining item.
+	(Benchmark infrastructure): Remove reference to jMocha.
+
 2011-04-26  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* projects.html: Use regular <h2> markup for section headers
